Catalog work mostly done, still need single views and finishing touches on base catalog.

--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -20,7 +20,7 @@
       </div>
       <div class="col-10 content-back">
         <nav class="navbar navbar-expand-md navbar-light">
-          <div class="row header">
+          <div class="row header header-small">
             <div class="col-md-auto banner-text">
               <div class="row">
                 <div class="col">
@@ -63,7 +63,7 @@
                 </li>
               </ul>
             </div>
-          <div class="w-100">
+          <div class="w-100 menus">
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#collapse-left" aria-controls="#collapse-left" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon">
               </span>
